# cmake_example

./: CMakeLists.txt
src/: main.cpp
sub_module/: CMakeLists.txt
sub_module/src/: main.cpp
sub_module/sub2/: CMakeLists.txt
tests/: test.py  test2.py
